--- a/assignmenthtml/Assignment9.html
+++ b/assignmenthtml/Assignment9.html
@@ -34,7 +34,7 @@
         <option value="one">Africa</option>
         </select> <br> <br>
 
-<button type="button" onclick="alert('Form in Successfully')">Sign in!</button><br> <br>
+<input type="submit" value="sign in"><br> <br>
 
 <button type="button" onclick="alert('Form not accepted')">Reset!</button>
 
