--- a/portfolio.html/portfolio.html
+++ b/portfolio.html/portfolio.html
@@ -66,29 +66,36 @@
     <main class="main">
         <!--hero section-->
         <section id="hero" class="hero section light-background">
-            <img src="C:\Users\A1\Downloads\self.jpg" alt="bg" height="400px" width="500px">
+            <img src="C:\Users\A1\Downloads\self3.jpg" alt="bg" height="400px" width="500px">
             <div class="container" data-aos="zoom-out">
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
                         <h2>Deepali Vidhate</h2>
                         <p>
                             "I'm"
-                            <span class="types" data-typed-items="Designer, Develop, Photographer"> Designer</span>
+                            <span class="types" data-typed-items="Designer, Develop, Photographer">Developer</span>
                             <span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
                             <span class="types-cursor types-cursor--blink" aria-hidden="true"></span>
                         </p>
+                        <br>
                         <div class="social links">
                             <a href="#">
-                                <i class="bi bi-twiter-x"></i>
+                                <i class="fa-brands fa-youtube"></i>
                             </a>
                             <a href="#">
-                                <i class="bi bi-facebook"></i>
+                                <i class="fa-brands fa-facebook"></i>
                             </a>
                             <a href="#">
-                                <i class="bi bi-instagram"></i>
+                                <i class="fa-brands fa-instagram"></i>
                             </a>
                             <a href="#">
-                                <i class="bi bi-linkedin"></i>
+                                <i class="fa-brands fa-linkedin"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa-brands fa-x-twitter"></i>
+                            </a>
+                            <a href="#">
+                                <i class="fa-brands fa-twitter"></i>
                             </a>
                         </div>
                     </div>
@@ -109,7 +116,7 @@
             <div class="container" data-aos="fade-up" data-aos-delay="100">
                 <div class="row gy-4 justify-content-center">
                     <div class="col-lg-4">
-                        <img src="assets/img/profile-img.jpg" class="img-fluid" alt="image">
+                        <img src="C:\Users\A1\Downloads\self2.jpg" class="img-fluid" alt="image" height="900px" width="700px">
                     </div>
                     <div class="col-lg-8 content" >
                         <h2>UI/UX Designer & Web Developer.</h2>
@@ -177,8 +184,7 @@
             <div class="container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
                 <div class="row gy-4">
                     <div class="col-lg-3 col-md-6 d-flex flex-column aligh-item-center">
-                        <i class="bi bi-emoji-smile">
-                        </i>
+                        <i class="fa-solid fa-face-smile"></i>
                         <div class="stats-item">
                             <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="0" class="purecounter">232</span>
                             <p>Happy Clients</p>
@@ -186,8 +192,7 @@
                     </div>
                     <!--end stats item-->
                     <div class="col-lg-3 col-md-6 d-flex flex-column aligh-item-center">
-                        <i class="bi bi-journey-richtext">
-                        </i>
+                        <i class="fa-solid fa-book"></i>
                         <div class="stats-item">
                             <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="0" class="purecounter">521</span>
                             <p>Project</p>
@@ -195,8 +200,7 @@
                     </div>
                     <!--end stats item-->
                     <div class="col-lg-3 col-md-6 d-flex flex-column aligh-item-center">
-                        <i class="bi bi-headset">
-                        </i>
+                        <i class="fa-solid fa-headphones"></i>
                         <div class="stats-item">
                             <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="0" class="purecounter">1463</span>
                             <p>Hours of Support</p>
@@ -204,8 +208,7 @@
                     </div>
                     <!--end stats item-->
                     <div class="col-lg-3 col-md-6 d-flex flex-column aligh-item-center">
-                        <i class="bi bi-people">
-                        </i>
+                        <i class="fa-solid fa-users"></i>
                         <div class="stats-item">
                             <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="0" class="purecounter">15</span>
                             <p>Hard Workers</p>
@@ -289,7 +292,7 @@
         <!--resume section-->
         <section id="resume" class="resume section">
             <!--section title-->
-            <div class="container section title" data-aos="fade-up">
+            <div class="container section-title aos-init aos-animate" data-aos="fade-up">
                 <h2>Resume</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cum possimus nesciunt repellendus, voluptate facilis necessitatibus. Odit corporis suscipit perspiciatis mollitia quia consequuntur doloremque culpa, deleniti, quos, maiores debitis natus quod?</p>
             </div>
@@ -303,15 +306,12 @@
                             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim dolore voluptates at aut accusamus molestias illo nobis animi. Quam, cum?</p>
                             <ul>
                                 <li>
-                                    ::maker
                                     address
                                 </li>
                                  <li>
-                                    ::maker
                                     +91 84829 78433
                                 </li>
                                  <li>
-                                    ::maker
                                     deepalividhate06@gmail.com
                                 </li>
                             </ul>
@@ -384,11 +384,11 @@
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,521.0016835830174C376.1290562159157,517.8887921683347,466.0731472004068,529.7835943286574,510.70327084640275,468.03025145048787C554.3714126377745,407.6079735673963,508.03601936045806,328.9844924480964,491.2728898941984,256.3432110539036C474.5976632858925,184.082847569629,479.9380746630129,96.60480741107993,416.23090153303,58.64404602377083C348.86323505073057,18.502131276798302,261.93793281208167,40.57373210992963,193.5410806939664,78.93577620505333C130.42746243093433,114.334589627462,98.30271207620316,179.96522072025542,76.75703585869454,249.04625023123273C51.97151888228291,328.5150500222984,13.704378332031375,421.85034740162234,66.52175969318436,486.19268352777647C119.04800174914682,550.1803526380478,217.28368757567262,524.383925680826,300,521.0016835830174"></path>
                             </svg>
-                            <i class="bi bi-activity"></i>
+                            
                         </div>
                         <a href="#" class="stretched-link">
-                        <h3>Nescium Mete</h3> </a>
-                        <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
+                        <h3>UI/UX Design</h3> </a>
+                        <p>Create intuitive, visually appealing interfaces and user experiences guided by user-centered principles.</p>
                     </div>
                 </div>
                 <div cl="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
@@ -397,11 +397,11 @@
                             <svg width="100" height="100" viewBox="0 0 600 600" xmlns="http://www.w3.org/2000/svg">
                                 <path stroke="none" stroke-width="0" fill="#f5f5f5" d="M300,582.0697525312426C382.5290701553225,586.8405444964366,449.9789794690241,525.3245884688669,502.5850820975895,461.55621195738473C556.606425686781,396.0723002908107,615.8543463187945,314.28637112970534,586.6730223649479,234.56875336149918C558.9533121215079,158.8439757836574,454.9685369536778,164.00468322053177,381.49747125262974,130.76875717737553C312.15926192815925,99.40240125094834,248.97055460311594,18.661163978235184,179.8680185752513,50.54337015887873C110.5421016452524,82.52863877960104,119.82277516462835,180.83849132639028,109.12597500060166,256.43424936330496C100.08760227029461,320.3096726198365,92.17705696193138,384.0621239912766,124.79988738764834,439.7174275375508C164.83382741302287,508.01625554203684,220.96474134820875,577.5009287672846,300,582.0697525312426"></path>
                             </svg>
-                            <i class="bi bi-broadcast"></i>
+                            
                         </div>
                         <a href="#" class="stretched-link">
-                        <h3>Eosle Commodi</h3> </a>
-                        <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+                        <h3>Content Strategy & Copywriting</h3> </a>
+                        <p>Craft compelling website copy, blog posts, and marketing messaging tailored to your audience.</p>
                     </div>
                 </div>
                 <div cl="col-lg-4 col-md-6 aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
@@ -458,21 +458,21 @@
             <div class="row gy-4">
                 <div class="col-lg-4">
                     <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-                        <i class="bi bi-geo-alt flex-shrink-0"></i>
+                        <i class="fa-solid fa-location-dot"></i>
                         <div>
                             <h3>Address</h3>
                             <p>abcdefghijklmnopqrstuvwxyz</p>
                         </div>
                     </div>
                     <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
-                        <i class="bi bi-telephone flex-shrink-0"></i>
+                        <i class="fa-solid fa-phone"></i>
                         <div>
                             <h3>Call us</h3>
                             <p>+91 87847 87674</p>
                         </div>
                     </div>
                     <div class="info-item d-flex aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-                        <i class="bi bi-envelope flex-shrink-0"></i>
+                        <i class="fa-solid fa-square-envelope"></i>
                         <div>
                             <h3>E-mail</h3>
                             <p>info@example.com</p>
@@ -515,10 +515,10 @@
     </main>
     <footer id="footer" class="footer position-relative light-background">
     <div class="container">
-      <h3 class="sitename">Brandon Johnson</h3>
+      <h3 class="sitename">Deepali Vidhate</h3>
       <p>Et aut eum quis fuga eos sunt ipsa nihil. Labore corporis magni eligendi fuga maxime saepe commodi placeat.</p>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
+        <a href=""></a>
         <a href=""><i class="bi bi-facebook"></i></a>
         <a href=""><i class="bi bi-instagram"></i></a>
         <a href=""><i class="bi bi-skype"></i></a>
