--- a/JavaScript/String_Indexing_JS/index.html
+++ b/JavaScript/String_Indexing_JS/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    
 </head>
 <body>
 
-    <script src="validate.js"></script>
+    <script src="string_indexing.js"></script>
      <!-- Go Live Server -->
      <!-- ctrl + shift +j -->
      <!-- Get Console in Browser -->
