--- a/portfolio.html/portfolio.html
+++ b/portfolio.html/portfolio.html
@@ -23,6 +23,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <!--main css file-->
     <link href="assets/css/main.css" rel="stylesheet">
+    <!-- <script src="main.js"></script> -->
 </head>
 <body class="index-page">
     <header id="header" class="header d-flex flex-column justify-content-center">
@@ -85,6 +86,9 @@
                             <a href=""><i class="fa-brands fa-linkedin"></i></a>
                             <a href=""><i class="fa-brands fa-x-twitter"></i></a>
                             <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        </div> <br>
+                        <div class="tag-cloud">
+                            <a href="c:\Users\A1\Downloads\Screenshot 2025-06-21 183143.pdf"> Download Resume</a>
                         </div>
                     </div>
                 </div>
@@ -195,9 +199,9 @@
             <div class="skill"><div class="bar" style="width:95%"></div><div class="name">UI Design</div></div>
             <div class="skill"><div class="bar" style="width:75%"></div><div class="name">Graphic Design</div></div>
             <div class="skill"><div class="bar" style="width:50%"></div><div class="name">HTML</div></div>
-            <div class="skill"><div class="bar" style="width:90%"></div><div class="name">HTML5 / CSS3</div></div>
-            <div class="skill"><div class="bar" style="width:80%"></div><div class="name">jQuery</div></div>
-            <div class="skill"><div class="bar" style="width:70%"></div><div class="name">PHP</div></div>
+            <div class="skill"><div class="bar" style="width:90%"></div><div class="name">CSS</div></div>
+            <div class="skill"><div class="bar" style="width:80%"></div><div class="name">...</div></div>
+            <div class="skill"><div class="bar" style="width:70%"></div><div class="name">JavaScript</div></div>
           </div>
             </div>
         </section>
