--- a/design/main.html
+++ b/design/main.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./dom/query_selector.js"></script>
+    <script src="style.js"></script>
 </head>
 <body>
-
-    <!-- <script src="variables.js"></script> -->
-     <!-- Go Live Server -->
-     <!-- ctrl + shift +j -->
-     <!-- Get Console in Browser -->
+    
 </body>
 </html>
