--- a/portfolio.html/portfolio.html
+++ b/portfolio.html/portfolio.html
@@ -74,7 +74,7 @@
                         <h2>Deepali Vidhate</h2>
                         <p>
                             "I'm"
-                            <span class="types" data-typed-items="Designer, Develop, Photographer">Developer</span>
+                            <span class="types" data-typed-items="Designer, Develop, Photographer">Student</span>
                             <span class="typed-cursor typed-cursor--blink" aria-hidden="true">|</span>
                             <span class="types-cursor types-cursor--blink" aria-hidden="true"></span>
                         </p>
@@ -426,6 +426,10 @@
     <!-- <a href="#" id="scroll-top" class="dot align-items-center justify-content-center">
         <i class="fa-solid fa-arrow-up"></i>
     </a> -->
+
+    <button id="back-to-top" class="fixed bottom-6 right-6 w-12 h-12 bg-primary text-white rounded-full shadow-lg flex items-center justify-center opacity-0 invisible transition-all duration-300">
+        <i class="ri-arrow-up-line ri-lg"></i>
+    </button>
 
     <!--preloader-->
     <script>
