--- a/portfolio.html/portfolio.html
+++ b/portfolio.html/portfolio.html
@@ -71,7 +71,7 @@
             <div class="container" data-aos="zoom-out">
                 <div class="row justify-content-center">
                     <div class="col-lg-9">
-                        <h2>Deepali Vidhate</h2>
+                        <h2 class="gallery">Deepali Vidhate</h2>
                         <p>
                             "I'm"
                             <span class="types" data-typed-items="Designer, Develop, Photographer">Student</span>
@@ -80,12 +80,12 @@
                         </p>
                         <br>
                         <div class="social-links d-flex justify-content-center">
-                            <a href=""><i class="fa-brands fa-youtube"></i></a>
-                            <a href=""><i class="fa-brands fa-facebook"></i></a>
-                            <a href=""><i class="fa-brands fa-instagram"></i></a>
-                            <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                            <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-                            <a href=""><i class="fa-brands fa-twitter"></i></a>
+                            <a href="" class="gallery"><i class="fa-brands fa-youtube"></i></a>
+                            <a href="" class="gallery"><i class="fa-brands fa-facebook"></i></a>
+                            <a href="" class="gallery"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="" class="gallery"><i class="fa-brands fa-linkedin"></i></a>
+                            <a href="" class="gallery"><i class="fa-brands fa-x-twitter"></i></a>
+                            <a href="" class="gallery"><i class="fa-brands fa-twitter"></i></a>
                         </div> <br>
                         <div class="tag-cloud">
                             <a href="c:\Users\A1\Downloads\Screenshot 2025-06-21 183143.pdf"> Download Resume</a>
@@ -233,7 +233,10 @@
                                 </li>
                             </ul>
                         </div>
+                    </div>
+                    <br><br>
                         <h3 class="resume-title">Education</h3>
+                        <div class="container-y">
                         <div class="resume-item">
                             <h4>Computer Engineering</h4>
                             <h5>2026-28</h5>
@@ -250,6 +253,7 @@
                     </div>
                     <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
                         <h3 class="resume-title">Professional Experiance</h3>
+                        <div class="container-y">
                         <div class="resume-item">
                             <h4>Company name</h4>
                             <h5>year</h5>
@@ -276,7 +280,7 @@
                                 </li>
                             </ul>
                         </div>
-                    
+                    </div>
                 </div>
             </div>
         </section>
@@ -344,6 +348,59 @@
   </div>
         </div>
     </section>
+
+    <!-- Achievements Section -->
+    <section id="Achievement"class="Achievement section">
+      <div class="container mx-auto px-4">
+    
+        <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+            <h2>Achievements & Impact</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat laboriosam quidem deleniti temporibus architecto quos accusantium facilis obcaecati ab aperiam, mollitia ratione libero veniam ex velit earum asperiores omnis dolorum.</p>
+        </div>
+            <div class="container-x">
+  <div>
+    <div class="achievement-card bg-gradient-to-br from-blue-50 to-white p-6 rounded-lg border border-blue-100">
+            <div class="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mb-6">
+              <span class="tag-cloud-s"><i class="fa-solid fa-star"></i></span>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">500+</h3>
+            <p class="text-gray-600">Students Mentored</p>
+            <p class="text-sm text-gray-500 mt-2">
+              Successfully guided over 500 students in web development and
+              programming fundamentals.
+            </p>
+          </div>
+  </div>
+  <div>
+    <div class="achievement-card bg-gradient-to-br from-blue-50 to-white p-6 rounded-lg border border-blue-100">
+            <div class="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mb-6">
+              <span class="tag-cloud-s"><i class="fa-solid fa-award"></i></span>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">15+</h3>
+            <p class="text-gray-600">Industry Awards</p>
+            <p class="text-sm text-gray-500 mt-2">
+              Recognized for excellence in web development and innovative
+              solutions.
+            </p>
+          </div>
+  </div>
+  <div>
+    <div class="achievement-card bg-gradient-to-br from-blue-50 to-white p-6 rounded-lg border border-blue-100">
+            <div class="w-16 h-16 bg-blue-100 rounded-full flex items-center justify-center mb-6">
+              <span class="tag-cloud-s"><i class="fa-solid fa-code"></i></span>
+            </div>
+            <h3 class="text-xl font-semibold mb-2">50+</h3>
+            <p class="text-gray-600">Open Source Contributions</p>
+            <p class="text-sm text-gray-500 mt-2">
+              Active contributor to various open source projects and developer
+              communities.
+            </p>
+          </div>
+  </div>
+</div>
+          </div>
+        </div>
+        </div>
 
     <!--contact section-->
     <section id="Contact" class="Contact section">
