--- a/portfolio.html/v.html
+++ b/portfolio.html/v.html
@@ -5,6 +5,56 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     
+    <style>
+        /* Reset and layout */
+/* * { box-sizing: border-box; } */
+body {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px;
+}
+/* .gallery {
+  width: calc(33.333% - 16px);
+  background: #fff;
+  border: 1px solid #ddd;
+  overflow: hidden;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+@media(max-width: 768px) {
+  .gallery { width: calc(50% - 16px); }
+}
+@media(max-width: 480px) {
+  .gallery { width: 100%; }
+}
+
+/* Image styling */
+/*.gallery img {
+  width: 100%;
+  height: auto;
+  display: block;
+  transition: transform 0.3s;
+} */
+
+/* Hover effects */
+.gallery:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 16px rgba(0,0,0,0.2);
+}
+.gallery:hover img {
+  transform: scale(1.05);
+}
+
+/* Text styling */
+/* .gallery h3 {
+  margin: 12px;
+  font-size: 1.2em;
+}
+.gallery p {
+  margin: 0 12px 12px;
+  color: #555;
+} */
+
+    </style>
 </head>
 <body>
 
@@ -12,5 +62,20 @@
      <!-- Go Live Server -->
      <!-- ctrl + shift +j -->
      <!-- Get Console in Browser -->
+
+     <!-- HTML Structure -->
+<div class="gallery">
+  <img src="project1.jpg" alt="Project 1">
+  <h3>Project Title</h3>
+  <p>Short description goes here.</p>
+</div>
+<div class="gallery">
+  <img src="project2.jpg" alt="Project 2">
+  <h3>Another Project</h3>
+  <p>Brief summary.</p>
+</div>
+<!-- Repeat .gallery blocks as needed -->
+
+      
 </body>
 </html>
