--- a/portfolio.html/portfolio.html
+++ b/portfolio.html/portfolio.html
@@ -23,7 +23,7 @@
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     <!--main css file-->
     <link href="assets/css/main.css" rel="stylesheet">
-    <!-- <script src="main.js"></script> -->
+    <script src="portfolio.js"></script>
 </head>
 <body class="index-page">
     <header id="header" class="header d-flex flex-column justify-content-center">
