Mini Project & Assesment

--- a/AssignmentPY/product/productm.html
+++ b/AssignmentPY/product/productm.html
@@ -73,6 +73,7 @@
         <option value="fragrances">Fragrances</option>
         <option value="groceries">Groceries</option>
         <option value="skincare">Skincare</option>
+        <option value="skincare">Furniture</option>
       </select>
       <div class="cart">Cart: <span id="cart-count">0</span> items - $<span id="total-price">0</span></div>
     </nav>
